# authn-service

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile_mysql8  README.md  docker-compose.yml
.sqlx/: query-03ba559bacca8af0cccfad3a038348fbd7afa39890b80a226846146e3e53f0b7.json  query-04f0870f2a859342f90796af681ba695d043d9800f6d082d9dfac72b88000d4a.json  query-09eca517a34b0eaf7ddb2eefa41bcea7c4fad8e4d08f2109966facf7e3141774.json  query-0a82647ba2a60befd974be9e5917bd0a94ede124f8c39296f2837c17bf0fdba9.json  query-14117d7c84ba20169db07e51ea488393bbff6b9bc1653f4c1f33a75ca23209fb.json  query-2a937d0a864a20388b6e0680ba9d32f7822b355db276ee72b439f82c46cf3bb1.json  query-2d56cbe42b7c55ea7e5caf702e4a83f7ae8f96478a39d9dea0050a9d10f512b2.json  query-2fcd63aabf602d6934647ee4d772159333dceeacec60570b4d5238871221608b.json  query-302367d7ae9a125b692e27b148d78967095b3fbf3c0d037d2fb314327cd2c12e.json  query-38409104629d89a571567a934a3be9b6a4c28ba8c861574d8634c2802ba669a9.json  query-41ed451fee4e1d6484d23a3a16876819384c722898b85b0a16187fa7f45012a1.json  query-48b8a4ca0d26d43a44e656599fd41412dd8febc4c000964a924ed8593c142dcc.json  query-4ba8bf4043a62164d13afe4010194a4156836317d9d161907632db3490ae20c3.json  query-5455f37cabadde90047be168eee080ba0523a413c8ce4dd3c866d0d3bfc7d32a.json  query-6ff24610dbd2fea11c9806db241480faeb7927c2951349126a13de7ed12a7e0c.json  query-71d3c22348209549d2622722b6b768117a18666a847854680a64a107ea5111ad.json  query-78ceaec678897327345bef0af2b2c58f35e980105fa5dd53276a404b933cb7ab.json  query-78f559063b18a2c22c0b45b90d10be468fd5ca7ecf86e5916626e100a04bd103.json  (+17 more)
(+67 files in other folders)
