[package]
name = "forum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
http = "0.2.9"
lazy_static = "1.4.0"
ring = "0.16.20"
derive_builder = "0.12.0"
redis = { version = "0.23.1", features = ["json", "aio", "tokio-comp"] }
async-trait = "0.1.72"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7.6"
tracing-appender = "0.2"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "macros",
    "mysql",
    "chrono",
    "uuid",
] }
anyhow = "1.0.72"
dotenvy = "0.15.7"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
nacos-sdk = { version = "0.3", features = ["async"] }
base64 = "0.21.2"
utoipa = { version = "3.5.0", features = ["actix_extras", "chrono"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
